force-app/main/default/objects/Switching_Configuration__c/Switching_Configuration__c.object-meta.xml
<CustomObject>
    <label>Switching Configuration</label>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Switching Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>