force-app/main/default/objects/Switching_Configuration__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Endpoint URL for the distributor&apos;s web service</description>
    <inlineHelpText>Enter the endpoint URL for the distributor&apos;s web service</inlineHelpText>
    <label>Endpoint URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>