force-app/main/default/objects/Switching_Configuration__c/fields/Integration_Class__c.field-meta.xml
<CustomField>
    <fullName>Integration_Class__c</fullName>
    <label>Integration Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>