force-app/main/default/objects/Switching_Configuration__c/fields/Message_Format__c.field-meta.xml
<CustomField>
    <fullName>Message_Format__c</fullName>
    <label>Message Format</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>