force-app/main/default/objects/Switching_Configuration__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password for authentication with the distributor&apos;s service</description>
    <inlineHelpText>Enter the password for authentication with the distributor&apos;s service</inlineHelpText>
    <label>Password</label>
    <length>50</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>