force-app/main/default/objects/Switching_Configuration__c/fields/Request_XML__c.field-meta.xml
<CustomField>
    <fullName>Request_XML__c</fullName>
    <description>XML content of the switching request</description>
    <inlineHelpText>XML content of the switching request</inlineHelpText>
    <label>Request XML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>