force-app/main/default/objects/Switching_Configuration__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plantilla XML asociada a esta configuración</description>
    <label>Template</label>
    <referenceTo>XML_Template__c</referenceTo>
    <relationshipLabel>Switching Configurations</relationshipLabel>
    <relationshipName>Switching_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>