force-app/main/default/objects/Switching_Configuration__c/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <defaultValue>30000</defaultValue>
    <description>Timeout in milliseconds for API calls to the distributor&apos;s service</description>
    <inlineHelpText>Enter the timeout in milliseconds for API calls (default: 30000)</inlineHelpText>
    <label>Timeout (ms)</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>