force-app/main/default/objects/Switching_Configuration__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <inlineHelpText>Username for authentication with the distributor&apos;s web service</inlineHelpText>
    <label>Username</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>